--- a/Chatbot/dollos/index.html
+++ b/Chatbot/dollos/index.html
@@ -1,101 +1,47 @@
-document.addEventListener("DOMContentLoaded", () => {
-  const inputField = document.getElementById("input");
-  inputField.addEventListener("keydown", (e) => {
-    if (e.code === "Enter") {
-      let input = inputField.value;
-      inputField.value = "";
-      output(input);
-    }
-  });
-});
+<!DOCTYPE html>
+<html>
 
-function output(input) {
-  let product;
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="Bot javascript" />
+	<title>Chatbot</title>
+	<link rel="icon" href="assets/bot.png" />
+	<link rel="stylesheet" href="assets/css/responsif.css" />
+	<link rel="stylesheet" href="assets/style.css" />
+	<link rel="stylesheet" href="assets/css/shortcut.css" />
+</head>
 
-  /*
-    RegEx menghapus yang bukan kata/karakter spasi
-    ketika ada spasi
-    hapus nilai dan gantikan dengan nilai baru
-  */
+<body id="chatbot">
+	<h1 align="center">Aplikasi chatbot</h1>
+	<div id="container" class="containers">
+		<img id="pict_bot" src="assets/bot.png" alt="image robot" height="300px" />
+		<div id="chat" class="chats">
+			<!-- masih rencana -->
+			<header>
+				<div class="left_item">
+					<p class="logo">App</p>
+				</div>
+				<div class="right_item">
+					<div>
+						kdslfjs
+					</div>
+				</div>
+			</header>
+			<div id="messages" class="messages">
+				<div id="bot" class="bot response"><span>Halo warganet!<br>ketikkan !help untuk beberapa shorcut</span>
+				</div>
+			</div>
+			<div class="bottomChats">
+				<div class="inputStyle">
+					<input id="input" type="text" placeholder="Ketikkan sesuatu..." autocomplete="off"
+						autofocus="true" />
+				</div>
+			</div>
+		</div>
+	</div>
+</body>
+<script type="text/javascript" src="assets/js/index.js"></script>
+<script type="text/javascript" src="assets/js/otak.js"></script>
+<script type="text/javascript" src="assets/js/speech.js"></script>
 
-  let teks = input.toLowerCase().replace(/[^\w\s]/gi, "").replace(/[\d]/gi, "").trim();
-  teks = teks
-    .replace(/ anu/g, "") // anu itu -> itu
-    .replace(/anu /g, "")
-    .replace(/ anu /g, "")
-    .replace(/avv/g, "")
-    .replace(/kntl /g, "")
-    .replace(/ kntl/g, "")
-    .replace(/ g /g, "")
-    .replace(/lu /g, "kamu")
-    .replace(/u /g, "kamu")
-    .replace(/[?]/g, "")
-    .replace(/ [?]/g, "");
-
-  if (compare(prompts, replies, teks)) {
-    // Mencari kata kunci yang benar dari prompts
-    product = compare(prompts, replies, teks);
-  } else if (teks.match(/(makasih|thanks)/gi)) {
-    product = "Sama sama"
-  } else if (teks.match(/(corona|covid|virus)/gi)) {
-    // Jika tidak ada yang sesuai tapi keyword corona virus masuk maka alihkan percakapan ke coronavirus
-    product = coronavirus[Math.floor(Math.random() * coronavirus.length)];
-  } else {
-    // Jika semua salah alihkan percakapan ke alternative / teks random
-    product = alternative[Math.floor(Math.random() * alternative.length)];
-  }
-
-  // Update DOM
-  addChat(input, product);
-}
-
-function compare(promptsArray, repliesArray, string) {
-  let reply;
-  let replyFound = false;
-  for (let x = 0; x < promptsArray.length; x++) {
-    for (let y = 0; y < promptsArray[x].length; y++) {
-      if (promptsArray[x][y] === string) {
-        let replies = repliesArray[x];
-        reply = replies[Math.floor(Math.random() * replies.length)];
-        replyFound = true;
-        // inner Loop berhenti ketika nilai dari prompt nya di temukan atau sama dengan yang di replies
-        break;
-      }
-    }
-    if (replyFound) {
-      // Loop luar berhenti kalau nilai dari prompt nya di temukan melalui array
-      break;
-    }
-  }
-  return reply;
-}
-
-function addChat(input, product) {
-  const messagesContainer = document.getElementById("messages");
-
-  let userDiv = document.createElement("div");
-  userDiv.id = "user";
-  userDiv.className = "user response";
-  userDiv.innerHTML = `<img src="assets/user.png" class="avatar"><span>${input}</span>`;
-  messagesContainer.appendChild(userDiv);
-
-  let botDiv = document.createElement("div");
-  let botImg = document.createElement("img");
-  let botText = document.createElement("span");
-  botDiv.id = "bot";
-  botImg.src = "assets/bot-mini.png";
-  botImg.className = "avatar";
-  botDiv.className = "bot response";
-  botText.innerText = "Mengetik..";
-  botDiv.appendChild(botText);
-  botDiv.appendChild(botImg);
-  messagesContainer.appendChild(botDiv);
-  // Biarkan percakapan tetap berlanjut
-  messagesContainer.scrollTop = messagesContainer.scrollHeight - messagesContainer.clientHeight;
-
-  // Bagian delay palsu
-  setTimeout(() => {
-    botText.innerText = `${product}`;
-    textToSpeech(product)
-  }, 2000)
-}
+</html>
