--- a/Chatbot/dollos/index.html
+++ b/Chatbot/dollos/index.html
@@ -28,14 +28,17 @@
 				</div>
 			</header>
 			<div id="messages" class="messages">
-				<div id="bot" class="bot response"><span>Halo warganet!<br>ketikkan !help untuk beberapa shorcut</span>
+				<div id="bot" class="bot response">
+					<span>Halo warganet!<br>ketikkan _help untuk beberapa shorcut</span>
+					<img src="assets/bot-mini.png" class="avatar">
 				</div>
 			</div>
 			<div class="bottomChats">
-				<div class="inputStyle">
+				<form class="inputStyle" action="javascript:void(0)">
 					<input id="input" type="text" placeholder="Ketikkan sesuatu..." autocomplete="off"
 						autofocus="true" />
-				</div>
+					<input type="submit" value="kirim" />
+				</form>
 			</div>
 		</div>
 	</div>
