--- a/Chatbot/dollos/index.html
+++ b/Chatbot/dollos/index.html
@@ -34,9 +34,11 @@
 				</div>
 			</div>
 			<div class="bottomChats">
-				<form class="inputStyle" action="javascript:void(0)">
-					<input id="input" type="text" placeholder="Ketikkan sesuatu..." autocomplete="off"
-						autofocus="true" />
+				<form action="javascript:void(0)" class="d-flex">
+					<div class="inputStyle">
+						<input id="input" type="text" placeholder="Ketikkan sesuatu..." autocomplete="off"
+							autofocus="true" />
+					</div>
 					<input type="submit" value="kirim" />
 				</form>
 			</div>
