--- a/Chatbot/dollos/index.html
+++ b/Chatbot/dollos/index.html
@@ -33,14 +33,18 @@
 					<img src="assets/bot-mini.png" class="avatar">
 				</div>
 			</div>
-			<div class="bottomChats">
-				<form action="javascript:void(0)" class="d-flex">
-					<div class="inputStyle">
-						<input id="input" type="text" placeholder="Ketikkan sesuatu..." autocomplete="off"
-							autofocus="true" />
-					</div>
-					<input type="submit" value="kirim" />
-				</form>
+			<div class="bottomChats d-flex-only">
+				<div class="inputStyle">
+					<input id="input" type="text" placeholder="Ketikkan sesuatu..." autocomplete="off"
+						autofocus="true" />
+				</div>
+				<div id="submitBtn" class="b-radius-l">
+					<svg xmlns="http://www.w3.org/2000/svg" width="17.5" height="15" viewBox="0 0 17.5 15">
+						<path id="Icon_material-send" data-name="Icon material-send"
+							d="M1.675,17.5,19.167,10,1.675,2.5,1.667,8.333,14.167,10l-12.5,1.667Z"
+							transform="translate(-1.667 -2.5)" fill="#2a2c3a" />
+					</svg>
+				</div>
 			</div>
 		</div>
 	</div>
