--- a/Chatbot/dollos/index.html
+++ b/Chatbot/dollos/index.html
@@ -7,6 +7,8 @@
 	<title>Chatbot</title>
 	<link rel="icon" href="assets/bot.png" />
 	<link rel="stylesheet" href="assets/style.css" />
+	<link rel="stylesheet" href="assets/css/shorcut.css" />
+	<link rel="stylesheet" href="assets/css/responsif.css" />
 </head>
 
 <body id="chatbot">
