--- a/Chatbot/dollos/index.html
+++ b/Chatbot/dollos/index.html
@@ -6,9 +6,9 @@
 	<meta name="description" content="Bot javascript" />
 	<title>Chatbot</title>
 	<link rel="icon" href="assets/bot.png" />
-	<link rel="stylesheet" href="assets/style.css" />
-	<link rel="stylesheet" href="assets/css/shorcut.css" />
 	<link rel="stylesheet" href="assets/css/responsif.css" />
+	<link rel="stylesheet" href="assets/style.css" />
+	<link rel="stylesheet" href="assets/css/shortcut.css" />
 </head>
 
 <body id="chatbot">
