--- a/Chatbot/dollos/index.html
+++ b/Chatbot/dollos/index.html
@@ -24,10 +24,10 @@
 				</div>
 				<div class="right_item d-flex-only">
 					<div id="theme" class="cursor-pointer">
-						<div onclick="setDarkMode(true)" id="darkBtn" class=""><img src="assets/img/moon.svg" alt="">
+						<div onclick="setDarkMode(true)" id="darkBtn" class=""><img src="assets/img/moon.svg" alt="Moon image">
 						</div>
 						<div onclick="setDarkMode(false)" id="lightBtn" class="hidden"><img src="assets/img/sun.svg"
-								alt="">
+								alt="Sun image">
 						</div>
 					</div>
 					<div id="menuItem" class="cursor-pointer">
