--- a/Profoli/public_html/index.html
+++ b/Profoli/public_html/index.html
@@ -32,11 +32,11 @@
   <header>
     <div class="inner width-responsif mrl-auto ptb-l d-flex-vertical">
       <p class="Logo">Dollong</p>
+
       <div class="m_button" id="btnNav">
         <span></span>
         <span></span>
         <span></span>
-
       </div>
 
     </div>
@@ -46,7 +46,8 @@
       <li class="b-radius-l active click-effect"><a href="index.html">Home</a></li>
       <li class="b-radius-l"><a href="portofolio.html">Portofolio</a></li>
       <li class="b-radius-l"><a href="">Blog</a></li>
-      <li class="b-radius-l"><a href="">Service</a></li>
+      <li class="b-radius-l"><a href="workspace.html">Workspace</a></li>
+      <li class="b-radius-l"><a href="storage.html">Storage</a></li>
       <li class="b-radius-l"><a href="">About</a></li>
       <li class="b-radius-l"><a href="">Contact</a></li>
     </ul>
