--- a/g2_academy/tugas/index.html
+++ b/g2_academy/tugas/index.html
@@ -1,1 +1,113 @@
-doc
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ini judul</title>
+    <link rel="stylesheet" href="assets/style.css">
+</head>
+<body>
+    <div id="myCv">
+        <div class="left side pt-70">
+            <div class="heading_left_side plr-50">
+                <h1>Doltons Edward <p class="clr-orange">Nicholas</p></h1>
+            </div>
+            <br>
+            <div class="myProfile">
+                <img src="https://image.kpopmap.com/2020/01/Treasure-Teulejeo-I-Love-You-member-profile-DoYoung.jpg" alt="myProfile">
+            </div>
+            <br>
+            <div class="footer_left_side plr-50">
+                <h2>Contact</h2>
+                <ul>
+                    <li class="pb-35">
+                        <h3>Address</h3>
+                        <p>Jln.Catalina kompleks auri mandai, sulawesi selatan</p>
+                    </li>
+                    <li class="pb-35">
+                        <h3>Phone</h3>
+                        <p>+62 896 1980 0459</p>
+                    </li>
+                    <li class="pb-35">
+                        <h3>Email</h3>
+                        <p><a href="mailto:edwarddoltons@gmail.com">edwarddoltons@gmail.com</a></p>
+                    </li>
+                    <li class="pb-35">
+                        <h3>Linkedin</h3>
+                        <p><a href="https://www.linkedin.com/in/doltons-edward-nicholas-p-1498a7208/">https://www.linkedin.com/in/doltons-edward-nicholas-p-1498a7208/</a></p>
+                    </li>
+                </ul>
+                <h2>Language</h2>
+                <ul class="pb-35">
+                    <li>Indonesia - id</li>
+                    <li>English - en</li>
+                </ul>
+                <h2>Hobbies</h2>
+                <ul class="primitive">
+                    <li>Ngoding</li>
+                    <li>Membaca dokumentasi pemprograman</li>
+                    <li>Design</li>
+                    <li>Sketching</li>
+                </ul>
+            </div>
+        </div>
+        <div class="right side pt-70 plr-30 pb-150">
+            <h2>Summary</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias dolorum voluptatum odit a praesentium maxime assumenda libero quos labore quisquam ab maiores ducimus veritatis cumque officia, ad quibusdam id illo.</p>
+            <br>
+            <h2>Skill hightlight</h2>
+            <ul>
+                <li>
+                    <p>Project manager</p>
+                </li>
+                <li>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <p>Creative Design</p>
+                </li>
+                <li>
+                    <p>Frontend</p>
+                </li>
+                <li>
+                    <p>UX UI Tester</p>
+                </li>
+                <li>
+                    <p>WebApp build</p>
+                </li>
+            </ul>
+            <br>
+            <h2>Experience</h2>
+            <p><strong>Web developer</strong> - 13/7/2018</p>
+            <p><strong>Creative Designer</strong>, Indonesia</p>
+            <ul class="primitive" >
+                <li>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, possimus quidem ab velit aut aperiam ipsa commodi quasi, omnis animi in placeat libero delectus molestias! Magni sapiente fugit perspiciatis vel.</p>
+                </li>
+                <li>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum veniam animi voluptate architecto possimus veritatis, odit magnam numquam, cum, reprehenderit sequi alias molestiae dicta sapiente labore consectetur magni! Accusamus, aliquid.</p>
+                </li>
+                <li>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit excepturi deleniti officia quisquam distinctio expedita placeat ipsum quae ipsam rerum totam, ducimus saepe, quas molestiae, magni facere accusamus obcaecati incidunt.</p>
+                </li>
+                <li>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis molestias magni obcaecati animi. Nesciunt minima voluptatibus cumque obcaecati reiciendis atque quae dolorem, consequuntur soluta ipsa, mollitia blanditiis hic sequi debitis?</p>
+                </li>
+            </ul>
+            <br>
+            <h2>Education</h2>
+            <p>SMA ANGKASA LANUD - 2016 - 2019</p>
+            <p>Progate (online class) - 2019 - 2021</p>
+            <p>FreeCodeCamp (online class) - 2020 - 2021</p>
+            <p>Skillvul (online class) - 2020 - 2021</p>
+            <p>G2 Academy (online class) - 2021</p>
+            <br>
+            <h2>Certification</h2>
+            <p>Millenialfest x TalentaJuara - Complete bootcamp as CTO</p>
+            <p>Progate - Web Path Developer</p>
+            <p>FreeCodeCamp - Responsive Web Design</p>
+        </div>
+    </div>
+</body>
+</html>
